Delete css and start styling with bootstrap.

--- a/src/index.html
+++ b/src/index.html
@@ -3,57 +3,70 @@ layout: default
 title: Home
 ---
 
+<style>
+a {
+  color: black;
+}
+</style>
 <div class="container text-center">
-  <div id="presentation-card" class="row full-screen section">
+  <div class="row full-screen section">
     <div class="row">
-      <h1>Marcos Bellucci</h1>
-    </div>
-
-    <div class="row">
-      <p>
+      <h1 class='page-header'>
+        <ul class='list-inline'>
+          <li>Marcos Bellucci</li>
+          <li><a href="/blog.html"><small>Blog</small></a></li>
+          <li><a href="/projects.html"><small>Projects</small></a></li>
+          <li><a href="/contact.html"><small>Contact</small></a></li>
+          <li><a target='_blank' href="/resume.html"><small>Resume</small></a></li>
+        </ul>
+      </h1>
+      <p class='lead'>
       Are you looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software?<br/>
       Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs?<br/>
       Drop me an email <a href="mailto:delbetu@gmail.com">delbetu@gmail.com</a>
       </p>
     </div>
 
-    <div class="row social-icons">
-      <a target="_blank" data-toggle="tooltip" title="Resume"
-        href="/resume">
-        <i class="fa fa-2x fa-book"></i>
-      </a>
+    <div class="row">
+      <ul class='list-inline'>
+        <li>
+          <a target="_blank" data-toggle="tooltip" title="Linkedin"
+            href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918/?locale=en_US">
+            <i class="fa fa-2x fa-linkedin"></i>
+          </a>
+        </li>
 
-      <a target="_blank" data-toggle="tooltip" title="Linkedin"
-        href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918/?locale=en_US">
-        <i class="fa fa-2x fa-linkedin"></i>
-      </a>
+        <li>
+          <a target="_blank" data-toggle="tooltip" title="Dev.to"
+            href="https://dev.to/delbetu">
+            <img class="invert-svg-color fix-margin" style='margin-bottom: 10px;'
+                 src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
+                 alt="M Bellucci's DEV Profile" height="28" width="24" />
+          </a>
+        </li>
 
-      <a target="_blank" data-toggle="tooltip" title="Dev.to"
-        href="https://dev.to/delbetu">
-        <img class="invert-svg-color fix-margin"
-        src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
-        alt="M Bellucci's DEV Profile" height="28" width="24" />
-      </a>
+        <li>
+          <a target="_blank" data-toggle="tooltip" title="Twitter"
+            href="https://twitter.com/delbetu" >
+            <i class="fa fa-2x fa-twitter"></i>
+          </a>
+        </li>
 
-      <a id="sample-code-link" href="#" data-toggle="tooltip" title="Sample Code">
-        <i class="fa fa-2x fa-pencil"></i>
-      </a>
+        <li>
+          <a target="_blank" data-toggle="tooltip" title="Github"
+            href="https://github.com/delbetu">
+            <i class="fa fa-2x fa-github"></i>
+          </a>
+        </li>
 
-      <a target="_blank" data-toggle="tooltip" title="Twitter"
-        href="https://twitter.com/delbetu" >
-        <i class="fa fa-2x fa-twitter"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Github"
-        href="https://github.com/delbetu">
-        <i class="fa fa-2x fa-github"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Meetup"
-        href="http://www.meetup.com/es-ES/members/87421642/">
-        <i class="fa fa-2x fa-meetup"></i>
-      </a>
-
+        <li>
+          <a target="_blank" data-toggle="tooltip" title="Meetup"
+            href="http://www.meetup.com/es-ES/members/87421642/">
+            <i class="fa fa-2x fa-meetup"></i>
+          </a>
+        </li>
+      </ul>
     </div>
+
   </div>
 
