Comment out projects and blog for now.

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@ a {
   color: black;
 }
 </style>
-<div class="container text-center">
+<div class="container-fluid text-center">
   <div class="row full-screen section">
     <div class="row">
       <h1 class='page-header'>
         <ul class='list-inline'>
           <li>Marcos Bellucci</li>
-          <li><a href="/blog.html"><small>Blog</small></a></li>
-          <li><a href="/projects.html"><small>Projects</small></a></li>
+          <!-- <li><a href="/blog.html"><small>Blog</small></a></li> -->
+          <!-- <li><a href="/projects.html"><small>Projects</small></a></li> -->
           <li><a href="/contact.html"><small>Contact</small></a></li>
           <li><a target='_blank' href="/resume.html"><small>Resume</small></a></li>
         </ul>
