Update to bootstrap 4

--- a/src/contact.html
+++ b/src/contact.html
@@ -4,8 +4,8 @@ title: Contact
 
 ---
 
-  <div class="row full-screen section">
-    <h2>Get in touch</h2>
+  <h2>Get in touch</h2>
+  <div class="row full-screen">
     <form action="//formspree.io/delbetu@gmail.com" method="POST" id="contact-form">
 
       <input class="form-group form-control" type="email" name="from" placeholder="Email address" required>
