--- a/src/index.html
+++ b/src/index.html
@@ -5,68 +5,76 @@ title: Home
 
 <style>
 a {
+  color: grey;
+}
+.social-icons a {
   color: black;
 }
+.container {
+  margin-top: 20vh;
+  max-width: 80vw;
+}
 </style>
-<div class="container-fluid text-center">
-  <div class="row full-screen section">
-    <div class="row">
-      <h1 class='page-header'>
-        <ul class='list-inline'>
-          <li>Marcos Bellucci</li>
-          <!-- <li><a href="/blog.html"><small>Blog</small></a></li> -->
-          <!-- <li><a href="/projects.html"><small>Projects</small></a></li> -->
-          <li><a href="/contact.html"><small>Contact</small></a></li>
-          <li><a target='_blank' href="/resume.html"><small>Resume</small></a></li>
-        </ul>
-      </h1>
+
+<div class='container'>
+  <div class='row align-items-center'>
+    <ul class='list-inline col text-center'>
+      <li class='list-inline-item'><h1>Marcos Bellucci</h1></li>
+      <!-- <li class='list&#45;inline&#45;item'><a href="/blog.html">Blog</a></li> -->
+      <li class='list-inline-item'><a href="/projects.html">Projects</a></li>
+      <li class='list-inline-item'><a href="/contact.html">Contact</a></li>
+      <li class='list-inline-item'><a target='_blank' href="/resume.html">Resume</a></li>
+    </ul>
+  </div>
+  <div class='row'>
+    <div class='col'>
       <p class='lead'>
-      Are you looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software?<br/>
+      Are you looking for a <strong>Software Engineer </strong> able to deliver
+      <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software?<br/>
       Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs?<br/>
       Drop me an email <a href="mailto:delbetu@gmail.com">delbetu@gmail.com</a>
       </p>
     </div>
-
-    <div class="row">
-      <ul class='list-inline'>
-        <li>
-          <a target="_blank" data-toggle="tooltip" title="Linkedin"
-            href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918/?locale=en_US">
-            <i class="fa fa-2x fa-linkedin"></i>
-          </a>
-        </li>
-
-        <li>
-          <a target="_blank" data-toggle="tooltip" title="Dev.to"
-            href="https://dev.to/delbetu">
-            <img class="invert-svg-color fix-margin" style='margin-bottom: 10px;'
-                 src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
-                 alt="M Bellucci's DEV Profile" height="28" width="24" />
-          </a>
-        </li>
-
-        <li>
-          <a target="_blank" data-toggle="tooltip" title="Twitter"
-            href="https://twitter.com/delbetu" >
-            <i class="fa fa-2x fa-twitter"></i>
-          </a>
-        </li>
-
-        <li>
-          <a target="_blank" data-toggle="tooltip" title="Github"
-            href="https://github.com/delbetu">
-            <i class="fa fa-2x fa-github"></i>
-          </a>
-        </li>
-
-        <li>
-          <a target="_blank" data-toggle="tooltip" title="Meetup"
-            href="http://www.meetup.com/es-ES/members/87421642/">
-            <i class="fa fa-2x fa-meetup"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-
   </div>
 
+  <div class='row align-items-center'>
+    <ul class='list-inline col text-center social-icons' >
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Linkedin"
+                                                 href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918/?locale=en_US">
+          <i class="fa fa-2x fa-linkedin"></i>
+        </a>
+      </li>
+
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Dev.to"
+                                                 href="https://dev.to/delbetu">
+          <img class="invert-svg-color fix-margin" style='margin-bottom: 10px;'
+               src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
+               alt="M Bellucci's DEV Profile" height="28" width="24" />
+        </a>
+      </li>
+
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Twitter"
+                                                 href="https://twitter.com/delbetu" >
+                                                 <i class="fa fa-2x fa-twitter"></i>
+        </a>
+      </li>
+
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Github"
+                                                 href="https://github.com/delbetu">
+          <i class="fa fa-2x fa-github"></i>
+        </a>
+      </li>
+
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Meetup"
+                                                 href="http://www.meetup.com/es-ES/members/87421642/">
+          <i class="fa fa-2x fa-meetup"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
