--- a/src/projects.html
+++ b/src/projects.html
@@ -3,6 +3,15 @@ layout: page
 title: Projects
 ---
 
+<style>
+  .card {
+    max-width: 25vw;
+  }
+  .card-body p {
+    font-size: 1vw;
+  }
+</style>
+
 <div class='card-deck'>
   <div class='card'>
     <img src='/assets/images/task-logger.png' class='card-img-top' alt='task-logger-screenshot'>
