Fix contact form.

--- a/src/contact.html
+++ b/src/contact.html
@@ -4,8 +4,9 @@ title: Contact
 
 ---
 
-  <h2>Get in touch</h2>
-  <div class="row full-screen">
+<div class='row'>
+  <h2 class='col-md-4'>Get in touch</h2>
+  <div class="col-md-6 full-screen">
     <form action="//formspree.io/delbetu@gmail.com" method="POST" id="contact-form">
 
       <input class="form-group form-control" type="email" name="from" placeholder="Email address" required>
@@ -18,3 +19,4 @@ title: Contact
       <input type="hidden" name="_next" value="{{ page.url }}"></input>
     </form>
   </div>
+</div>
