--- a/index.html
+++ b/index.html
@@ -1,106 +1,80 @@
 ---
 layout: default
+title: Home
 ---
 
-<div class="container text-center">
-  <div id="presentation-card" class="row full-screen section">
-    <div class="row">
-      <h1>Marcos Bellucci</h1>
-    </div>
+<style>
+a {
+  color: grey;
+}
+.social-icons a {
+  color: black;
+}
+.container {
+  margin-top: 20vh;
+  max-width: 80vw;
+}
+</style>
 
-    <div class="row">
-      <p>
-      Are you looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software?<br/>
+<div class='container'>
+  <div class='row align-items-center'>
+    <ul class='list-inline col text-center'>
+      <li class='list-inline-item'><h1>Marcos Bellucci</h1></li>
+      <!-- <li class='list&#45;inline&#45;item'><a href="/blog.html">Blog</a></li> -->
+      <li class='list-inline-item'><a href="/projects.html">Projects</a></li>
+      <li class='list-inline-item'><a href="/contact.html">Contact</a></li>
+      <li class='list-inline-item'><a target='_blank' href="/resume.html">Resume</a></li>
+    </ul>
+  </div>
+  <div class='row'>
+    <div class='col'>
+      <p class='lead'>
+      Are you looking for a <strong>Software Engineer </strong> able to deliver
+      <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software?<br/>
       Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs?<br/>
       Drop me an email <a href="mailto:delbetu@gmail.com">delbetu@gmail.com</a>
       </p>
     </div>
-
-    <div class="row social-icons">
-      <a target="_blank" data-toggle="tooltip" title="Resume"
-        href="/resume">
-        <i class="fa fa-2x fa-book"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Linkedin"
-        href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918/?locale=en_US">
-        <i class="fa fa-2x fa-linkedin"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Dev.to"
-        href="https://dev.to/delbetu">
-        <img class="invert-svg-color fix-margin"
-        src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
-        alt="M Bellucci's DEV Profile" height="28" width="24" />
-      </a>
-
-      <a id="sample-code-link" href="#" data-toggle="tooltip" title="Sample Code">
-        <i class="fa fa-2x fa-pencil"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Twitter"
-        href="https://twitter.com/delbetu" >
-        <i class="fa fa-2x fa-twitter"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Github"
-        href="https://github.com/delbetu">
-        <i class="fa fa-2x fa-github"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Meetup"
-        href="http://www.meetup.com/es-ES/members/87421642/">
-        <i class="fa fa-2x fa-meetup"></i>
-      </a>
-
-    </div>
-
-    <div class="row">
-      <a href="#" class="hire-me" id="hire-me-button">Contact Me!</a>
-    </div>
   </div>
 
-  <div class="row full-screen section dark">
-    <h2 class="section-title">Sample Code</h2>
-    <div class="sample-code-card">
-      <h2> Task Logger (Ruby + Rspec)</h2>
-      <a href="https://github.com/delbetu/task_logger">View on Github</a>
-      <div class="description">
-        <p>
-        Task logger is a simple console app for loggin your daily work.<br>
-        It was developed using TDD, splitting code responsiblities into IO-interactor objects and UI program and Core functionality.<br>
-        Core objects were tested first moking the interaction with collaborators.<br>
-        That revealed the interface that IO objects should met.<br>
-        This app interacts with external API as an IO device, and File storage as another IO device<br>
-        </p>
-      </div>
-    </div>
+  <div class='row align-items-center'>
+    <ul class='list-inline col text-center social-icons' >
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Linkedin"
+                                                 href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918/?locale=en_US">
+          <i class="fa fa-2x fa-linkedin"></i>
+        </a>
+      </li>
 
-    <div class="sample-code-card">
-      <h2> TODO App (BackboneJs + Rails)</h2>
-      <a href="https://github.com/delbetu/todo-app">View on Github</a>
-      <div class="description">
-        <p>
-        This application is composed of two different projects backend and fronted.<br>
-        Backend is a Rails 4 app which exposes a simple API to manage list of tasks.<br>
-        Frontend is a backbone app which consumes the rails API.<br>
-        This application was built with no previous knowledge of backbone-js. It was just to experiment new technologies.<br>
-        </p>
-      </div>
-    </div>
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Dev.to"
+                                                 href="https://dev.to/delbetu">
+          <img class="invert-svg-color fix-margin" style='margin-bottom: 10px;'
+               src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
+               alt="M Bellucci's DEV Profile" height="28" width="24" />
+        </a>
+      </li>
+
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Twitter"
+                                                 href="https://twitter.com/delbetu" >
+                                                 <i class="fa fa-2x fa-twitter"></i>
+        </a>
+      </li>
+
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Github"
+                                                 href="https://github.com/delbetu">
+          <i class="fa fa-2x fa-github"></i>
+        </a>
+      </li>
+
+      <li class='list-inline-item'>
+        <a target="_blank" data-toggle="tooltip" title="Meetup"
+                                                 href="http://www.meetup.com/es-ES/members/87421642/">
+          <i class="fa fa-2x fa-meetup"></i>
+        </a>
+      </li>
+    </ul>
   </div>
-
-  <div class="row full-screen section">
-    <h2 class="section-title">Get in touch</h2>
-    <form action="//formspree.io/delbetu@gmail.com" method="POST" id="contact-form">
-
-      <input class="form-group form-control" type="email" name="from" placeholder="Email address" required>
-
-      <input class="form-group form-control" type="text" name="name" placeholder="Name">
-
-      <textarea class="form-group form-control" name="message-body" rows="8" cols="40" placeholder="Your message ..."></textarea>
-
-      <button type="submit" class="btn btn-lg btn-primary">Send</button>
-      <input type="hidden" name="_next" value="{{ page.url }}"></input>
-    </form>
-  </div>
+</div>
