--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,13 @@ title: Projects
 <style>
   .card {
     max-width: 25vw;
+    max-height: 80vh;
+  }
+  .card img {
+    max-height: 30vh;
   }
   .card-body p {
-    font-size: 1vw;
+    font-size: 1.5vh;
   }
 </style>
 
