Add supermarket rules project

--- a/projects.html
+++ b/projects.html
@@ -52,4 +52,20 @@ title: Projects
       <a href='https://todo--backbone.herokuapp.com/' class='btn btn-default' role='button'>Live</a>
     </div>
   </div>
+
+  <div class='card'>
+    <img src='/assets/images/supermarket-rules.png' class='card-img-top' alt='supemarket-rules-screenshot'>
+    <div class='card-body'>
+      <h5 class='card-title'> Supermarket Discount Rules (Rspec/Ruby)</h5>
+      <p class='card-text'>
+         This project implements a flexible solution to the problem of offering multiple discount rules on a supermarket.
+         If you follow the commits you can see how it was built.
+         In particular you can see the usage of `TDD`, `Refactoring` and `Design-Patterns` applied.
+      </p>
+    </div>
+
+    <div class='card-footer'>
+      <a href='https://github.com/delbetu/refactoring-to-chain-of-responsibility' class='btn btn-primary' role='button'>Github</a>
+    </div>
+  </div>
 </div>
