Add about-me page

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ title: Contact
 
       <input class="form-group form-control" type="text" name="name" placeholder="Name">
 
-      <textarea class="form-group form-control" name="message-body" rows="8" cols="40" placeholder="Your message ..."></textarea>
+      <textarea class="form-group form-control" name="message-body" rows="8" cols="40" placeholder="Tell me about you"></textarea>
 
       <button type="submit" class="btn btn-lg btn-primary">Send</button>
       <input type="hidden" name="_next" value="{{ page.url }}"></input>
