--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ a {
     <ul class='list-inline col text-center'>
       <li class='list-inline-item'><h1>Marcos Bellucci</h1></li>
       <!-- <li class='list&#45;inline&#45;item'><a href="/blog.html">Blog</a></li> -->
+      <li class='list-inline-item'><a href="/about-me.html">About Me</a></li>
       <li class='list-inline-item'><a href="/projects.html">Projects</a></li>
       <li class='list-inline-item'><a href="/contact.html">Contact</a></li>
       <li class='list-inline-item'><a target='_blank' href="/resume.html">Resume</a></li>
