--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ a {
       I've participated in more than 5 projects during 8 years alongside people with different skills collaborating
       on building solutions to customer problems.<br/>
         
-      Feel free to check out some <a href="projects.html">demo code</a> that I left for you, or read my <a href="/resume.html">resume</a>.<br/>
+      Feel free to check out the <a href="projects.html">demo code</a> that I left for you, or read my <a href="/resume.html">resume</a>.<br/>
 
       Do you think I could be a good fit? <br/>
       
-      Let's chat (<a href="https://wa.me/59898613144">whatsapp</a>) or Drop me an email <a href="mailto:delbetu@gmail.com">delbetu@gmail.com</a></br>
+      Let's chat through<a href="https://wa.me/59898613144">whatsapp</a> or drop me an email <a href="mailto:delbetu@gmail.com">delbetu@gmail.com</a></br>
       </p>
     </div>
   </div>
