Update about me

--- a/about-me.html
+++ b/about-me.html
@@ -6,15 +6,26 @@ title: Contact
 
 <div class='row align-items-center'>
   <div class='col-sm-3'>
-    <img class="img-thumbnail rounded-circle float-right" alt="ProfilePhoto" src='https://s.gravatar.com/avatar/aa13dc88f709dd1b1ec9b6b24e85089f?s=100' />
+    <img class="img-thumbnail rounded-circle float-right" alt="ProfilePhoto" src='https://s.gravatar.com/avatar/b74aaa4709c3ce936ae609aacbe3b3aa?s=100' />
   </div>
 
   <div class='col-sm align-self-center'>
     <h3>About me</h3>
-    <p> I have a B.S Degree in Computer Science and I've been teaching for 2 years, programming in JavaEE for 4 years and RoR for 5 years.  </p>
-    <p> I'm passionate about making software products reach success by providing my expertise and skills in the Software Engineering field.  </p>
-    <p> I've helped to build multi-user, distributed applications that support high traffic with millions of registered users.  </p>
+    <p> Software Engineer with Computer Science background</p>
+    <p> 10 years in web-development</p>
+    <p> 7 different projects in which I helped to build multi-user, distributed applications that support high traffic with millions of registered users</p>
   </div>
 
   <div class='col-sm-3'></div>
+</div>
+
+<div class="row">
+  <div class='col-3'></div>
+  <div class='col-6'>
+    <i class="devicon-ruby-plain-wordmark colored"></i>
+    <i class="devicon-rails-plain-wordmark colored"></i>
+    <i class="devicon-typescript-plain colored"></i>
+    <i class="devicon-react-original-wordmark colored"></i>
+  </div>
+  <div class='col-3'></div>
 </div>
