--- a/index.html
+++ b/index.html
@@ -30,14 +30,21 @@ a {
       <i class="devicon-typescript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
     </div>
+  </div>
 
-    <div class='row align-items-center'>
-      <div class='col-sm align-self-center'>
-        <p> Software Engineer with Computer Science background</p>
-        <p> 10 years in web-development</p>
-        <p> 7 different projects in which I helped to build multi-user, distributed applications that support high traffic with millions of registered users</p>
-      </div>
+  <div class='row'>
+    <div class='col-sm-3'></div>
+    <div class='col-sm'>
+      <p class='lead'>
+      <br/>
+      Software Engineer with Computer Science background<br/>
+      <br/>
+      10 years in web-development<br/>
+      <br/>
+      7 different projects in which I helped to build multi-user, distributed applications that support high traffic with millions of registered users<br/>
+      <br/>
     </div>
+    <div class='col-sm-3'></div>
   </div>
 
   <div class='row align-items-center'>
