--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ a {
       <!-- <li class='list&#45;inline&#45;item'><a href="/blog.html">Blog</a></li> -->
       <li class='list-inline-item'><a href="/portfolio.html">Portfolio</a></li>
       <li class='list-inline-item'><a target='_blank' href="/resume.html">Resume</a></li>
+      <li class='list-inline-item'><a href="/oss_contributions.html">Open Source</a></li>
     </ul>
   </div>
 
