add hexa to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,4 +68,19 @@ title: Portfolio
       <a href='https://github.com/delbetu/refactoring-to-chain-of-responsibility' class='btn btn-primary' role='button'>Github</a>
     </div>
   </div>
+
+  <div class='card'>
+    <img src='/assets/images/hexa.png' class='card-img-top' alt='supemarket-rules-screenshot'>
+    <div class='card-body'>
+      <h5 class='card-title'> Hexa (Ruby, Rack, Sequel, Graphql)</h5>
+      <p class='card-text'>
+      Backend Api Template Project.<br/>
+      A set of tools organized on an <a href="https://en.wikipedia.org/wiki/Hexagonal_architecture_(software)">hexagonal-architecture</a> which I've crated as an alternative to Rails
+      </p>
+    </div>
+
+    <div class='card-footer'>
+      <a href='https://github.com/delbetu/hexa' class='btn btn-primary' role='button'>Github</a>
+    </div>
+  </div>
 </div>
