reorder projects in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,26 +18,43 @@ title: Portfolio
 
 <div class='card-deck'>
   <div class='card'>
-    <img src='/assets/images/task-logger.png' class='card-img-top' alt='task-logger-screenshot'>
+    <img src='/assets/images/hexa.png' class='card-img-top' alt='supemarket-rules-screenshot'>
     <div class='card-body'>
-      <h5 class='card-title'>Task Logger (Ruby + Rspec)</h5>
+      <b>Oct 2020</b>
+      <h5 class='card-title'> Hexa (Ruby, Rack, Sequel, Graphql)</h5>
       <p class='card-text'>
-        Task logger is a simple console app for loggin your daily work.<br>
-        It was developed using TDD, splitting code responsiblities into IO-interactor objects and UI program and Core functionality.<br>
-        Core objects were tested first moking the interaction with collaborators.<br>
-        That revealed the interface that IO objects should met.<br>
-        This app interacts with external API as an IO device, and File storage as another IO device<br>
+      Backend Api Template Project.<br/>
+      A set of tools organized on an <a href="https://en.wikipedia.org/wiki/Hexagonal_architecture_(software)">hexagonal-architecture</a> which I've crated as an alternative to Rails
       </p>
     </div>
 
     <div class='card-footer'>
-      <a href='https://github.com/delbetu/task_logger' class='btn btn-primary' role='button'>Github</a>
+      <a href='https://github.com/delbetu/hexa' class='btn btn-primary' role='button'>Github</a>
+    </div>
+  </div>
+
+
+  <div class='card'>
+    <img src='/assets/images/supermarket-rules.png' class='card-img-top' alt='supemarket-rules-screenshot'>
+    <div class='card-body'>
+      <b>Feb 2020</b>
+      <h5 class='card-title'> Supermarket Discount Rules (Rspec/Ruby)</h5>
+      <p class='card-text'>
+         This project implements a flexible solution to the problem of offering multiple discount rules on a supermarket.
+         If you follow the commits you can see how it was built.
+         In particular you can see the usage of `TDD`, `Refactoring` and `Design-Patterns` applied.
+      </p>
+    </div>
+
+    <div class='card-footer'>
+      <a href='https://github.com/delbetu/refactoring-to-chain-of-responsibility' class='btn btn-primary' role='button'>Github</a>
     </div>
   </div>
 
   <div class='card'>
     <img src='/assets/images/todo-app.png' class='card-img-top' alt='todo-app-screenshot'>
     <div class='card-body'>
+      <b>Oct 2019</b>
       <h5 class='card-title'> TODO App (BackboneJs + Rails)</h5>
       <p class='card-text'>
         This application is composed of two different projects backend and fronted.<br>
@@ -53,34 +70,24 @@ title: Portfolio
     </div>
   </div>
 
+
   <div class='card'>
-    <img src='/assets/images/supermarket-rules.png' class='card-img-top' alt='supemarket-rules-screenshot'>
+    <img src='/assets/images/task-logger.png' class='card-img-top' alt='task-logger-screenshot'>
     <div class='card-body'>
-      <h5 class='card-title'> Supermarket Discount Rules (Rspec/Ruby)</h5>
+      <b>Oct 2016</b>
+      <h5 class='card-title'>Task Logger (Ruby + Rspec)</h5>
       <p class='card-text'>
-         This project implements a flexible solution to the problem of offering multiple discount rules on a supermarket.
-         If you follow the commits you can see how it was built.
-         In particular you can see the usage of `TDD`, `Refactoring` and `Design-Patterns` applied.
+        Task logger is a simple console app for loggin your daily work.<br>
+        It was developed using TDD, splitting code responsiblities into IO-interactor objects and UI program and Core functionality.<br>
+        Core objects were tested first moking the interaction with collaborators.<br>
+        That revealed the interface that IO objects should met.<br>
+        This app interacts with external API as an IO device, and File storage as another IO device<br>
       </p>
     </div>
 
     <div class='card-footer'>
-      <a href='https://github.com/delbetu/refactoring-to-chain-of-responsibility' class='btn btn-primary' role='button'>Github</a>
+      <a href='https://github.com/delbetu/task_logger' class='btn btn-primary' role='button'>Github</a>
     </div>
   </div>
 
-  <div class='card'>
-    <img src='/assets/images/hexa.png' class='card-img-top' alt='supemarket-rules-screenshot'>
-    <div class='card-body'>
-      <h5 class='card-title'> Hexa (Ruby, Rack, Sequel, Graphql)</h5>
-      <p class='card-text'>
-      Backend Api Template Project.<br/>
-      A set of tools organized on an <a href="https://en.wikipedia.org/wiki/Hexagonal_architecture_(software)">hexagonal-architecture</a> which I've crated as an alternative to Rails
-      </p>
-    </div>
-
-    <div class='card-footer'>
-      <a href='https://github.com/delbetu/hexa' class='btn btn-primary' role='button'>Github</a>
-    </div>
-  </div>
 </div>
